<resources>
    <string name="app_name">ImmedSee</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="prompt">提示</string>
    <string name="close_click_again">再次点击退出应用</string>
    <string name="networkConnError">服务器连接失败，请检查您的网络</string>
    <string name="unknown_error">未知错误</string>
    <string name="i_kown">我知道了</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="link_start">Link Start</string>
    <string name="login_successful">登录成功</string>
    <string name="login_error">登录失败</string>
    <string name="login_error_name_or_password_incorrect">用户名或密码错误</string>
    <string name="prompt_userName">User</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm_Password</string>
    <string name="register">注册</string>
    <string name="mine">个人资料</string>
    <string name="please_input_user_name">请输入账号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_settings">Settings</string>
    <string name="join_us">join us</string>
    <string name="user_name_is_not_empty">用户名不能为空</string>
    <string name="password_old">旧&#160;&#160;密&#160;&#160;码</string>
    <string name="password_new">新&#160;&#160;密&#160;&#160;码</string>
    <string name="password_confirm">确认密码</string>
    <string name="password_old_please">请输入您的旧密码</string>
    <string name="password_new_please">请输入您的新密码</string>
    <string name="password_confirm_please">请再次输入您的新密码</string>
    <string name="password_old_different">旧密码输入错误</string>
    <string name="password_new_different">两次输入的新密码不一致</string>
    <string name="password_reset_successful">密码修改成功</string>
    <string name="password_reset_error">密码修改失败</string>
    <string name="register_ok">注册成功，请牢记您的用户名和密码</string>
    <string name="register_error_user_already_taken">注册失败，用户名已存在</string>
    <string name="register_error">注册失败</string>
    <string name="error_register_invalid_name">昵称在3-10字符之间，且不能包含空格、\'等特殊符号</string>
    <string name="error_register_invalid_password">密码在6-16字符之间，且不能包含空格、\'等特殊符号</string>
    <string name="error_register_invalid_confirm_password">两次密码不一致</string>
    <string name="show_password">显示密码</string>
    <string name="click_user_image">点击头像登录</string>
    <string name="logout_success">登出成功</string>
    <string name="signature">哼~签名什么的人家才不会写呢</string>
    <string name="user_image">头像</string>
    <string name="user_id">ID</string>
    <string name="user_role">角色</string>
    <string name="user_nick_name">昵称</string>
    <string name="user_sex">性别</string>
    <string name="user_signature">个性签名</string>
    <string name="user_email">邮箱</string>
    <string name="user_phone">手机号</string>
    <string name="user_register_date">注册时间</string>
    <string name="loading">正在加载...</string>
    <string name="loading_login">正在登录...</string>
    <string name="loading_delete">正在删除...</string>
    <string name="delete_successful">删除成功</string>
    <string name="clean_successful">清理完成！</string>
    <string name="load_all">已加载全部</string>
    <string name="delete">删除</string>
    <string name="comfirm">确定</string>
    <string name="cancel">取消</string>
    <string name="token_exp">token已过期，请重新登录</string>
    <string name="update_complete">更新完成</string>
    <string name="update_error">更新失败</string>
    <string name="crop_pick_error">图片资源缺失</string>

    <string name="setting_to">前往设置</string>
    <string name="cancel_next">下次再说</string>
    <string name="prompt_permission">您拒绝了该项功能所需权限的申请，将不能使用该功能，如您需要使用，请前往设置或安全中心开启权限后重新操作</string>
    <string name="codes_error">验证码错误</string>
    <string name="postUP_success">帖子发布成功</string>
    <string name="postUP_error">帖子发布失败</string>
    <string name="postSend_loading">帖子正在发布中</string>
    <string name="please_login">您还没有登陆，请登陆后使用</string>
    <string name="please_input_your_title">请填写标题</string>
    <string name="please_input_your_content">请填写内容</string>
    <string name="please_input_your_money">请输入悬赏值</string>
    <string name="please_check_your_money">你付出的悬赏值不能大于你拥有的即视币</string>
    <string name="please_choose_images">请挑选图片后再发布</string>
    <string name="commentUP_success">评论发布成功</string>
    <string name="commentUP_error">评论发布失败</string>
    <string name="commentSend_loading">评论正在发布中</string>
    <string name="post_end_error_user">不是你的帖子 无法结贴</string>
    <string name="post_end">本悬赏帖已结帖</string>
    <string name="post_delete_error">对不起，您无权删除别人的帖子</string>
    <string name="post_delete_success">帖子删除成功</string>
    <string name="post_delete_error2">帖子删除失败</string>
</resources>
