<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mine_toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/mine_app_theme"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        >
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/mine_toolBar"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <RelativeLayout
                        android:id="@+id/userImage"
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        android:background="@color/white"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/user_image"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/mine_userImage"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray"></View>


                    <RelativeLayout
                        android:id="@+id/userId"
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        android:background="@color/white"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/user_id"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/mine_userId"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:textColor="@color/black80"
                            android:textSize="14sp" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray"></View>

                    <RelativeLayout
                        android:id="@+id/userNickName"
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        android:background="@color/white"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/user_nick_name"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/mine_userNickName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:textColor="@color/black80"
                            android:textSize="14sp" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray"></View>

                    <RelativeLayout
                        android:id="@+id/userPhone"
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        android:background="@color/white"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/user_phone"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/mine_userPhone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:text="未绑定"
                            android:textColor="@color/black80"
                            android:textSize="14sp" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray"></View>

                    <RelativeLayout
                        android:id="@+id/userEmail"
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        android:background="@color/white"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/user_email"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/mine_userEmail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:text="未绑定"
                            android:textColor="@color/black80"
                            android:textSize="14sp" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray"></View>

                    <RelativeLayout
                        android:id="@+id/userSex"
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        android:background="@color/white"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/user_sex"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/mine_userSex"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:text="保密"
                            android:textColor="@color/black80"
                            android:textSize="14sp" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray"></View>

                    <RelativeLayout
                        android:id="@+id/userSignature"
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        android:background="@color/white"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/user_signature"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/mine_userSignature"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:text="@string/signature"
                            android:textColor="@color/black80"
                            android:textSize="14sp" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray"></View>

                    <RelativeLayout
                        android:id="@+id/userRegisterDate"
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        android:background="@color/white"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/user_register_date"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/mine_userRegisterDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:text="2017-10-20 14:19"
                            android:textColor="@color/black80"
                            android:textSize="14sp" />
                    </RelativeLayout>


                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
